[package]
name = "cnft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cnft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"]}
anchor-spl = {version = "0.29.0",features = ["metadata"]}
mpl-token-metadata = "4.1.2"
mpl-bubblegum = "1.4.0"
spl-account-compression = { version="0.3.0", features = ["no-entrypoint"] }
ahash = "=0.8.4"
solana-program = "=1.17.0"
# toml_datetime="=0.6.1"


